# Zero-Knowledge-Proof-of-Income-Verification

./: .gitignore  Cargo.toml  Dockerfile  README.md  architecture.md  implementation_plan.md  package-lock.json  package.json  plan_for_akhil_vignesh.md  start.sh  task.md
apps/: README.md
apps/bank-portal/: index.html  package-lock.json  package.json
apps/bank-portal/src/: App.jsx
apps/landlord-portal/: index.html  package-lock.json  package.json  vite.config.js
apps/landlord-portal/src/: App.jsx
apps/prover-wallet/: index.html  package-lock.json  package.json
apps/prover-wallet/src/: App.jsx
apps/user-portal/: index.html  package-lock.json  package.json  vite.config.js
apps/user-portal/src/: App.jsx
apps/user-portal/src/components/: Dashboard.jsx  IdentityBinding.jsx
apps/verifier-service/: package-lock.json  package.json
apps/verifier-service/src/: App.jsx
circuits/: income.circom  income_0000.zkey  income_0001.zkey  input.json  pot12_0001.ptau  proof.json  public.json  verification_key.json  witness.wtns
circuits/income_cpp/: Makefile  income.cpp
circuits/income_js/: income.wasm
infra/: main.tf  outputs.tf  variables.tf
misc-scripts/: run_frontends.sh
scripts/: create_table_local.sh  generate_graphs.py  requirements-graphs.txt  setup_circuit.sh  start_local_db.sh
src/: lib.rs  main.rs
src/modules/: bank.rs  database.rs  issuer.rs  mod.rs  pedersen.rs  prover.rs  zkp.rs
terraform/: .terraform.lock.hcl  main.tf
terraform/modules/static-site/: main.tf
