[package]
name = "zero_knowledge_proof_of_income_verification"
version = "0.1.0"
edition = "2021"

[dependencies]
bulletproofs = "5.0.0" # Latest stable
curve25519-dalek = { version = "4.1", features = ["rand_core", "digest"] }
hex = "0.4.3"
merlin = "3.0.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
