[package]
name = "zero_knowledge_proof_of_income_verification"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] } # Needed for rand in WASM
bulletproofs = "5.0.0" # Latest stable
curve25519-dalek = { version = "4.1", features = ["rand_core", "digest"] }
hex = "0.4.3"
merlin = "3.0.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
ed25519-dalek = "2.0.0"
